feat: Migrate Spring Boot application to JDK 17 and modernize codebase
- Updated application.properties for datasource initialization
- Refactored TestSuite to use JUnit 5 with display names
- Enhanced AuthControllerTest with JUnit 5 annotations and assertions
- Modernized FileControllerTest to utilize JUnit 5 and Mockito extensions
- Updated UserControllerTest with nested classes and improved assertions
- Refactored FileServiceTest to use JUnit 5 and nested test classes
- Modernized UserServiceSimpleTest with stream operations and assertions
- Updated UserServiceTest to use JUnit 5 and nested classes for better organization
- Enhanced JwtUtilSimpleTest and JwtUtilTest with JUnit 5 features
- Added VSCode settings for Java configuration
- Created comprehensive migration report detailing changes and improvements