@@ -1,108 +1,99 @@
 package com.example.demo.service;
 
 import com.example.demo.model.Users;
-import org.junit.Test;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-public class UserServiceSimpleTest {
+@DisplayName("UserService Logic Tests")
+class UserServiceSimpleTest {
 
     @Test
-    public void testGetUsersByDomainLogic() {
-        List<Users> users = Arrays.asList(
+    @DisplayName("Should filter users by domain using streams")
+    void testGetUsersByDomainLogic() {
+        List<Users> users = List.of(
             new Users(1L, "John Doe", "john@example.com"),
             new Users(2L, "Jane Smith", "jane@test.com"),
             new Users(3L, "Bob Johnson", "bob@example.com")
         );
         
-        List<Users> result = new ArrayList<Users>();
         String domain = "example.com";
+        List<Users> result = users.stream()
+                .filter(u -> u.getEmail() != null && u.getEmail().endsWith("@" + domain))
+                .collect(Collectors.toList());
         
-        for (int i = 0; i < users.size(); i++) {
-            Users u = users.get(i);
-            if (u.getEmail() != null && u.getEmail().endsWith("@" + domain)) {
-                result.add(u);
-            }
-        }
-        
-        assertEquals(2, result.size());
-        assertEquals("john@example.com", result.get(0).getEmail());
-        assertEquals("bob@example.com", result.get(1).getEmail());
+        assertAll(
+            () -> assertEquals(2, result.size()),
+            () -> assertEquals("john@example.com", result.get(0).getEmail()),
+            () -> assertEquals("bob@example.com", result.get(1).getEmail())
+        );
     }
 
     @Test
-    public void testSortUsersByNameLogic() {
-        List<Users> users = Arrays.asList(
+    @DisplayName("Should sort users by name using streams")
+    void testSortUsersByNameLogic() {
+        List<Users> users = List.of(
             new Users(1L, "John Doe", "john@example.com"),
             new Users(2L, "Alice Smith", "alice@test.com"),
             new Users(3L, "Bob Johnson", "bob@example.com")
         );
         
-        Collections.sort(users, new Comparator<Users>() {
-            public int compare(Users u1, Users u2) {
-                return u1.getName().compareTo(u2.getName());
-            }
-        });
+        List<Users> sorted = users.stream()
+                .sorted(Comparator.comparing(Users::getName))
+                .collect(Collectors.toList());
         
-        assertEquals("Alice Smith", users.get(0).getName());
-        assertEquals("Bob Johnson", users.get(1).getName());
-        assertEquals("John Doe", users.get(2).getName());
+        assertAll(
+            () -> assertEquals("Alice Smith", sorted.get(0).getName()),
+            () -> assertEquals("Bob Johnson", sorted.get(1).getName()),
+            () -> assertEquals("John Doe", sorted.get(2).getName())
+        );
     }
 
     @Test
-    public void testGroupByEmailDomainLogic() {
-        List<Users> users = Arrays.asList(
+    @DisplayName("Should group users by email domain using streams")
+    void testGroupByEmailDomainLogic() {
+        List<Users> users = List.of(
             new Users(1L, "John Doe", "john@example.com"),
             new Users(2L, "Jane Smith", "jane@test.com"),
             new Users(3L, "Bob Johnson", "bob@example.com")
         );
         
-        Map<String, List<Users>> map = new HashMap<String, List<Users>>();
+        Map<String, List<Users>> grouped = users.stream()
+                .filter(u -> u.getEmail() != null && u.getEmail().contains("@"))
+                .collect(Collectors.groupingBy(u -> u.getEmail().split("@")[1]));
         
-        for (int i = 0; i < users.size(); i++) {
-            Users u = users.get(i);
-            String email = u.getEmail();
-            if (email != null) {
-                String[] parts = email.split("@");
-                if (parts.length == 2) {
-                    String domain = parts[1];
-                    if (!map.containsKey(domain)) {
-                        map.put(domain, new ArrayList<Users>());
-                    }
-                    map.get(domain).add(u);
-                }
-            }
-        }
-        
-        assertEquals(2, map.size());
-        assertTrue(map.containsKey("example.com"));
-        assertTrue(map.containsKey("test.com"));
-        assertEquals(2, map.get("example.com").size());
-        assertEquals(1, map.get("test.com").size());
+        assertAll(
+            () -> assertEquals(2, grouped.size()),
+            () -> assertTrue(grouped.containsKey("example.com")),
+            () -> assertTrue(grouped.containsKey("test.com")),
+            () -> assertEquals(2, grouped.get("example.com").size()),
+            () -> assertEquals(1, grouped.get("test.com").size())
+        );
     }
 
     @Test
-    public void testSearchUsersByNameLogic() {
-        List<Users> users = Arrays.asList(
+    @DisplayName("Should search users by name using streams")
+    void testSearchUsersByNameLogic() {
+        List<Users> users = List.of(
             new Users(1L, "John Doe", "john@example.com"),
             new Users(2L, "Jane Smith", "jane@test.com"),
             new Users(3L, "Bob Johnson", "bob@example.com")
         );
         
         String keyword = "john";
-        List<Users> result = new ArrayList<Users>();
+        List<Users> result = users.stream()
+                .filter(u -> u.getName() != null && 
+                        u.getName().toLowerCase().contains(keyword.toLowerCase()))
+                .collect(Collectors.toList());
         
-        for (int i = 0; i < users.size(); i++) {
-            Users u = users.get(i);
-            if (u.getName() != null && u.getName().toLowerCase().contains(keyword.toLowerCase())) {
-                result.add(u);
-            }
-        }
-        
-        assertEquals(2, result.size());
-        assertTrue(result.get(0).getName().toLowerCase().contains("john"));
-        assertTrue(result.get(1).getName().toLowerCase().contains("john"));
+        assertAll(
+            () -> assertEquals(2, result.size()),
+            () -> assertTrue(result.stream().allMatch(u -> 
+                    u.getName().toLowerCase().contains("john")))
+        );
     }
 }
